--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ header{
     padding: 20px;
     font-size: 1em;
     width: 100%;
-    margin: 0;
+    margin: 0px;
 }
 
 main{
@@ -26,7 +26,7 @@ main{
 main img{
     border-radius: 10px;
     border: solid 5px #000;
-    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.8);
     max-width: 900px;
     max-height: 600px;
 }
